# libimgutil

./: .cproject  .gitignore  .project  CMakeLists.txt  README.md  compare.c  compressed_pixel_ops.c  configure.ac  error_diffuse.c  internal.h  libimgutil.c  libimgutil.git.kdev4  libimgutil.h  packed_pixel_ops.c  pad.c  planar_pixel_ops.c  pma.c
src/: CMakeLists.txt  Makefile.am  compare.c  compressed_pixel_ops.c  error_diffuse.c  hash.c  internal.h  libimgutil.c  libimgutil.h  names.c  packed_pixel_ops.c  pad.c  planar_pixel_ops.c  pma.c  rotate.c
