lib_LTLIBRARIES = libimgutil.la
libimgutil_la_SOURCES = compare.c compressed_pixel_ops.c error_diffuse.c hash.c libimgutil.c names.c packed_pixel_ops.c pad.c planar_pixel_ops.c pma.c rotate.c
libimgutil_la_SOURCES += internal.h libimgutil.h 
libimgutil_la_SOURCES += 3rdparty/rg_etc1.cpp
libimgutil_la_SOURCES += 3rdparty/rg_etc1.h
include_HEADERS = libimgutil.h
